# minirook

./: .gitignore  .pre-commit-config.yaml  minirook.py  pyproject.toml
.github/workflows/: lint.yml
dashboards/: README.md  k6__RGW_perf.json  rgw_perf.json
k6/: barbican.js  mixed.js  options.js  s3.js
mtail/: barbican.mtail  keystone.mtail  rgw.mtail  rgw.mtail~  rgw_beast.mtail
