[project]
name = "minirook"
version = "0.1.0"
description = "Rook/Ceph + OpenStack test environment on minikube"
requires-python = ">=3.13"
dependencies = [
    "kr8s",
    "click",
    "boto3",
    "httpx",
    "rich",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "boto3-stubs",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
